--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/drawer": "^7.1.2",
     "@react-navigation/elements": "^2.2.6",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
