--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/messaging": "^21.12.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
@@ -19,6 +20,8 @@
     "@react-navigation/material-top-tabs": "^7.1.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
+    "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.2",
     "formik": "^2.4.6",
     "react": "19.0.0",
     "react-hook-form": "^7.54.2",
@@ -31,6 +34,8 @@
     "react-native-svg": "^15.11.2",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
