--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "19.0.0",
     "react-hook-form": "^7.54.2",
     "react-native": "0.78.0",
+    "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-pager-view": "^6.7.0",
     "react-native-reanimated": "^3.17.1",
@@ -36,6 +37,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "swr": "^2.3.3",
     "yup": "^1.6.1"
   },
   "devDependencies": {
